--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "firebase": "^9.12.1",
-    "firebase-admin": "^11.2.0"
+    "firebase-admin": "^11.2.0",
+    "node": "^19.1.0"
   }
 }
